apps/glassware/dev/glassware-fe/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: glassware-dev
spec: {}
status: {}
