apps/glassware/dev/glassware-fe/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: glassware-fe
  labels:
    app.kubernetes.io/name: glassware-fe
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: glassware-fe
  template:
    metadata:
      labels:
        app.kubernetes.io/name: glassware-fe
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: glassware-fe
          image: harbor.devops4u.online/glass/glassware:f908d1f4
          imagePullPolicy: Always
          ports:
            - name: https
              containerPort: 3000
              protocol: TCP
          resources:
            requests: 
              cpu: 10m
              memory: 128Mi
            limits:
              cpu: 20m
              memory: 228Mi
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 3
