apps/glassware/dev/glassware-fe/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: glassware-fe
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: glassware-fe
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
    - port: 443
      targetPort: https
      protocol: TCP
      name: https
