apps/glassware/dev/glassware-fe/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: glassware-fe
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
    - host: "glassware-dev.devops4u.online"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: glassware-fe
                port:
                  name: https
  tls:
    - hosts:
        - "glassware-dev.devops4u.online"
      secretName: glassware-dev-devops4u-online-tls
